@@ -218,7 +218,19 @@ else {
 						$emails=NULL ;
 						if (isset($_POST["emails"])) {
 							$emails=$_POST["emails"] ;
+							for ($i=0; $i<count($emails); $i++) {
+								$emailsInner=explode(",", $emails[$i]) ;
+								for ($n=0 ; $n<count($emailsInner); $n++) {
+									if ($n==0) {
+										$emails[$i]=$emailsInner[$n] ;
+									}
+									else {
+										array_push($emails, $emailsInner[$n]) ;
+									}
+								}
+							}
 						}
+						
 						if (count($emails)>0) {
 							require $_SESSION[$guid]["absolutePath"] . '/lib/PHPMailer/class.phpmailer.php';
 				
