@@ -51,7 +51,7 @@ else {
 			<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 			<meta http-equiv="content-language" content="en"/>
 			<meta name="author" content="Ross Parker, International College Hong Kong"/>
-			<meta name="ROBOTS" content="none"/>
+			<meta name="robots" content="none"/>
 			
 			<?php
 			//Set up for i18n via gettext
